recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:1: error: not found: value getAngle
var a=getAngle
      ^